<resources>
    <string name="_album">album</string>
    <string name="_artist">artist</string>
    <string name="_composer">composer</string>
    <string name="_format">format</string>
    <string name="_genre">genre</string>
    <string name="_path">path</string>
    <string name="_replaygain">rgain</string>
    <string name="_title">title</string>
    <string name="_track">track</string>
    <string name="_year">year</string>
    <string name="about">About</string>
    <string name="accelerometer_shake">Accelerometer shake</string>
    <string name="add_to">Add to…</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="add_to_homescreen">Add to homescreen…</string>
    <string name="add_to_playlist">Add to playlist…</string>
    <string name="album">Album</string>
    <string name="album_track">Album, track number</string>
    <string name="albumartists">Album Artists</string>
    <string name="albums">Albums</string>
    <string name="all_songs">All tracks</string>
    <string name="always_show">Always show</string>
    <string name="app_name">Vanilla Music</string>
    <string name="artist">Artist</string>
    <string name="artist_album">Artist, album</string>
    <string name="artist_album_title">Artist, album, title</string>
    <string name="artist_album_track">Artist, album, track number</string>
    <string name="artist_year">Artist, year</string>
    <string name="artist_year_album">Artist, year, album</string>
    <string name="artists">Artists</string>
    <string name="audio">Audio</string>
    <string name="autoplaylist_playcounts_disabled">Do not create an automatic playlist</string>
    <string name="autoplaylist_playcounts_fmt" formatted="false">"%s 'Top %.0f' playlist"</string>
    <string name="autoplaylist_playcounts_name">Top %d</string>
    <string name="autoplaylist_playcounts_summary">Automatically create a</string>
    <string name="autoplaylist_playcounts_title">Automatic playlist creation</string>
    <string name="cancel">Cancel</string>
    <string name="choose_playlist_name">Choose playlist name</string>
    <string name="close_notification">Close notification</string>
    <string name="composers">Composers</string>
    <string name="cover_art">Cover art</string>
    <string name="cover_longpress_action_title">Cover long press action</string>
    <string name="cover_on_lockscreen_summary">Display the artwork of the currently playing track on the lockscreen</string>
    <string name="cover_on_lockscreen_title">Show artwork on lockscreen</string>
    <string name="cover_press_action_title">Cover tap action</string>
    <string name="coverloader_android_summary">Query Androids internal media database for album artwork</string>
    <string name="coverloader_android_title">Load artwork from Android</string>
    <string name="coverloader_inline_summary">Try to load embedded artwork from file tags</string>
    <string name="coverloader_inline_title">Load artwork from file tags</string>
    <string name="coverloader_shadow_summary">"Try to load artwork from '/sdcard/Music/.vanilla/ARTIST/ALBUM.jpg'"</string>
    <string name="coverloader_shadow_title">Load artwork from hidden folder</string>
    <string name="coverloader_vanilla_summary">Search for image files named cover.jpg, album.jpg or artwork.jpg and display them as album cover</string>
    <string name="coverloader_vanilla_title">Load artwork from folder</string>
    <string name="create">Create</string>
    <string name="customize_filebrowser_start">Filebrowser starts at this directory</string>
    <string name="customize_tab_order">Adjust the order and visibility of library tabs</string>
    <string name="cycle_continuous_shuffling">Continuous shuffle</string>
    <string name="cycle_continuous_shuffling_summary">"'Shuffle mode' will play tracks in completely random order"</string>
    <string name="cycle_repeat_mode">Cycle repeat mode</string>
    <string name="cycle_shuffle_mode">Cycle shuffle mode</string>
    <string name="date_added">Date added</string>
    <string name="default_action_title">Default action</string>
    <string name="default_playlist_action_title">Default playlist action</string>
    <string name="delete">Delete</string>
    <string name="delete_file">"Delete file '%s'?"</string>
    <string name="delete_file_failed">Failed to delete %s.</string>
    <string name="delete_item">"Delete '%s'?"</string>
    <string name="delete_playlist">Delete playlist %s?</string>
    <string name="deleted_item">"'%s' deleted."</string>
    <string name="dequeue_rest">Dequeue rest</string>
    <string name="disable_lockscreen_summary">Prevent the lockscreen from activating when in the library or playback screen</string>
    <string name="disable_lockscreen_title">Disable lockscreen</string>
    <string name="display_mode_title">Display mode</string>
    <string name="double_tap_summary">Double-tapping the 1x1 widget will open the player. Incurs a 400ms delay before the widget responds to actions.</string>
    <string name="double_tap_title">Double tap widget</string>
    <string name="edit">Edit</string>
    <string name="empty" />
    <string name="enable_scroll_to_song_summary">Scroll to currently playing track/album/artist in library lists</string>
    <string name="enable_scroll_to_song_title">Scroll to track title</string>
    <string name="enable_shake_summary">Only active when music is playing. Does not work when screen is off on some devices.</string>
    <string name="enable_shake_title">Enable accelerometer shake</string>
    <string name="equalizer">Equalizer</string>
    <string name="filebrowser_start">Filebrowser home</string>
    <string name="headset_launch_summary">"Play when the headphones are plugged in. (Requires the 'Headphone detector' app to be installed.)"</string>
    <string name="headset_launch_title">Play when plugged</string>
    <string name="headset_only_summary">Prevents music from being played through the internal speakers.</string>
    <string name="headset_only_title">External output only</string>
    <string name="headset_pause_summary">Pause when the headphones are unplugged.</string>
    <string name="headset_pause_title">Pause when unplugged</string>
    <string name="help">Help</string>
    <string name="hour_hint">HH</string>
    <string name="idle_timeout_title">Idle timeout</string>
    <string name="ignore_audiofocus_loss_summary">Keep playing on permanent audio focus loss</string>
    <string name="jump_to_enqueued_on_play_summary">If the requested song is already in the queue, jump to it instead of flushing the queue</string>
    <string name="jump_to_enqueued_on_play_title">"Jump to enqueued song on 'Play'"</string>
    <string name="keep_screen_on_summary">Keep the screen (and device) awake while Vanilla Music is visible</string>
    <string name="keep_screen_on_title">Keep screen on</string>
    <string name="library_screen">Library screen</string>
    <string name="media_button_beep_summary">Beep after skipping a track with a headset control double click.</string>
    <string name="media_button_beep_title">Headset control beep</string>
    <string name="media_button_summary">This is also required for ICS lockscreen controls.</string>
    <string name="media_button_title">Headset/Bluetooth controls</string>
    <string name="media_folders_header">Indexed directories</string>
    <string name="media_library">Media library</string>
    <string name="media_scan_drop_db">Flush media database</string>
    <string name="media_scan_force_bastp">Always use built-in tag reader</string>
    <string name="media_scan_full">Scan full filesystem (slower)</string>
    <string name="media_scan_group_albums">Group albums by folder</string>
    <string name="media_scan_header">Media scanner</string>
    <string name="media_scan_preferences">Scanner options</string>
    <string name="media_scan_start">Start scan</string>
    <string name="media_statistics">Statistics</string>
    <string name="media_stats_library_playtime">Total playing time (Hours)</string>
    <string name="media_stats_listen_playtime">Hours of music played so far</string>
    <string name="media_stats_tracks">Number of tracks</string>
    <string name="minute_hint">MM</string>
    <string name="misc_features">Miscellaneous features</string>
    <string name="notification_action_title">Notification action</string>
    <string name="notification_nag">Very verbose notification</string>
    <string name="notification_nag_summary">"Announce track changes using a 'Heads-Up-Notification'"</string>
    <string name="notification_visibility_title">Notification visibility</string>
    <string name="notifications">Notifications</string>
    <string name="playback_on_startup_summary">Open playback view on startup</string>
    <string name="playback_on_startup_title">Open on startup</string>
    <string name="playback_screen">Playback screen</string>
    <string name="playlist_sync_folder_summary">Folder to use for playlist synchronization</string>
    <string name="playlist_sync_folder_title">Synchronization folder</string>
    <string name="playlist_sync_mode_title">Playlist synchronization</string>
    <string name="playlists">Playlists</string>
    <string name="queue_enable_scroll_to_song_summary">Scroll to currently playing track in the queue on song change</string>
    <string name="queue_enable_scroll_to_song_title">Scroll to track title in queue</string>
    <string name="readahead">Enable readahead</string>
    <string name="readahead_summary">"Readahead the currently playing track. This option may solve 'audio dropout' issues. (caused by a slow SD card)"</string>
    <string name="replaygain">ReplayGain</string>
    <string name="replaygain_album_summary">Preserve album dynamics</string>
    <string name="replaygain_album_title">Enable album ReplayGain</string>
    <string name="replaygain_bump_title">ReplayGain pre-amp</string>
    <string name="replaygain_preamp_note_content">"Android does not allow Vanilla Music to raise the volume to >100%. Setting the Pre-amp to a high value may cause issues if you are listening to 'quiet' music. 

Recommended values are:
-> -3dB for silent/classical music
-> +3dB for post-2000 recordings"</string>
    <string name="replaygain_preamp_note_title">Note</string>
    <string name="replaygain_summary">Configure handling of ReplayGain information</string>
    <string name="replaygain_track_summary">Play all tracks at equal loudness</string>
    <string name="replaygain_track_title">Enable per-track ReplayGain</string>
    <string name="replaygain_untagged_debump_summary">Decrease volume by</string>
    <string name="replaygain_untagged_debump_title">Tracks without ReplayGain tag</string>
    <string name="scrobble_summary">Scrobble to Last.fm through Scrobble Droid or Simple Last.fm Scrobbler</string>
    <string name="scrobble_title">Use Scrobble Droid API</string>
    <string name="second_hint">SS</string>
    <string name="shake_action_title">Shake action</string>
    <string name="shake_threshold_title">Shake force threshold</string>
    <string name="stock_broadcast_summary">Send broadcasts emulating those sent by the stock music player to work with 3rd party lockscreen controls, widgets, etc.</string>
    <string name="stock_broadcast_title">Emulate stock broadcasts</string>
    <string name="swipe_down_action_title">Swipe down action</string>
    <string name="swipe_up_action_title">Swipe up action</string>
    <string name="tabs">Tab order</string>
    <string name="theme">Theme</string>
    <string name="time_separator">:</string>
    <string name="use_idle_timeout_summary">When active, playback will be stopped after the given period of inactivity</string>
    <string name="use_idle_timeout_title">Enable idle timeout</string>
    <string name="volume_during_ducking_summary">Playback volume:</string>
    <string name="volume_during_ducking_title">Volume during notification</string>
</resources>