<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:persistent="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/coverloader_vanilla_title" android:key="coverloader_vanilla" android:summary="@string/coverloader_vanilla_summary" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/coverloader_shadow_title" android:key="coverloader_shadow" android:summary="@string/coverloader_shadow_summary" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/coverloader_android_title" android:key="coverloader_android" android:summary="@string/coverloader_android_summary" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/coverloader_inline_title" android:key="coverloader_inline" android:summary="@string/coverloader_inline_summary" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/cover_on_lockscreen_title" android:key="cover_on_lockscreen" android:summary="@string/cover_on_lockscreen_summary" android:defaultValue="true" />
</PreferenceScreen>