<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:persistent="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:vanilla="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference android:title="@string/replaygain_track_title" android:key="enable_track_replaygain" android:summary="@string/replaygain_track_summary" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/replaygain_album_title" android:key="enable_album_replaygain" android:summary="@string/replaygain_album_summary" android:defaultValue="false" />
    <ch.blinkenlights.android.vanilla.SeekBarPreference android:title="@string/replaygain_bump_title" android:key="replaygain_bump" android:defaultValue="75" android:negativeButtonText="@null" android:dialogLayout="@layout/seekbar_pref" vanilla:sbpMaxValue="150" vanilla:sbpSummaryFormat="%s%+.1fdB" vanilla:sbpSummaryValueAddition="-75.0" vanilla:sbpSummaryValueMultiplication="0.2" />
    <ch.blinkenlights.android.vanilla.SeekBarPreference android:title="@string/replaygain_untagged_debump_title" android:key="replaygain_untagged_debump" android:defaultValue="150" android:negativeButtonText="@null" android:dialogLayout="@layout/seekbar_pref" vanilla:sbpMaxValue="150" vanilla:sbpSummaryFormat="%s %.1fdB" vanilla:sbpSummaryText="@string/replaygain_untagged_debump_summary" vanilla:sbpSummaryValueAddition="-150.0" vanilla:sbpSummaryValueMultiplication="0.1" />
    <Preference android:title="@string/replaygain_preamp_note_title" android:selectable="false" android:summary="@string/replaygain_preamp_note_content" />
</PreferenceScreen>