<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView android:textColor="?overlay_foreground_color" android:text="@string/media_scan_preferences" style="?android:listSeparatorTextViewStyle" />
        <CheckBox android:id="@id/media_scan_group_albums" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/media_scan_group_albums" />
        <CheckBox android:id="@id/media_scan_force_bastp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/media_scan_force_bastp" />
        <TextView android:textColor="?overlay_foreground_color" android:text="@string/media_folders_header" style="?android:listSeparatorTextViewStyle" />
        <TextView android:id="@id/media_directories" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/empty" />
        <Button android:layout_gravity="end" android:id="@id/edit_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/edit" />
        <TextView android:textColor="?overlay_foreground_color" android:text="@string/media_scan_header" style="?android:listSeparatorTextViewStyle" />
        <CheckBox android:id="@id/media_scan_full" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/media_scan_full" />
        <CheckBox android:id="@id/media_scan_drop_db" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/media_scan_drop_db" />
        <Button android:layout_gravity="end" android:id="@id/start_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/media_scan_start" />
        <TextView android:textColor="?overlay_foreground_color" android:text="@string/media_statistics" style="?android:listSeparatorTextViewStyle" />
        <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="1"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <TableRow>
                <TextView android:padding="3.0dip" android:text="@string/media_stats_tracks" />
                <TextView android:gravity="right" android:id="@id/media_stats_tracks" android:padding="3.0dip" android:text="@string/empty" />
            </TableRow>
            <TableRow>
                <TextView android:padding="3.0dip" android:text="@string/media_stats_library_playtime" />
                <TextView android:gravity="right" android:id="@id/media_stats_library_playtime" android:padding="3.0dip" android:text="@string/empty" />
            </TableRow>
            <TableRow>
                <TextView android:padding="3.0dip" android:text="@string/media_stats_listen_playtime" />
                <TextView android:gravity="right" android:id="@id/media_stats_listen_playtime" android:padding="3.0dip" android:text="@string/empty" />
            </TableRow>
        </TableLayout>
        <Button android:layout_gravity="end" android:id="@id/cancel_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" />
        <ProgressBar android:id="@id/media_stats_progress_bar" android:paddingTop="24.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" style="?android:progressBarStyleHorizontal" />
        <TextView android:id="@id/media_stats_progress_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/empty" android:minLines="3" />
    </LinearLayout>
</ScrollView>