<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:persistent="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/playback_on_startup_title" android:key="playback_on_startup" android:summary="@string/playback_on_startup_summary" android:defaultValue="false" />
    <ch.blinkenlights.android.vanilla.ListPreferenceSummary android:entries="@array/display_mode_entries" android:title="@string/display_mode_title" android:key="display_mode" android:defaultValue="2" android:entryValues="@array/entry_values" />
    <ch.blinkenlights.android.vanilla.ListPreferenceSummary android:entries="@array/swipe_action_entries" android:title="@string/swipe_up_action_title" android:key="swipe_up_action" android:defaultValue="Nothing" android:entryValues="@array/swipe_action_values" />
    <ch.blinkenlights.android.vanilla.ListPreferenceSummary android:entries="@array/swipe_action_entries" android:title="@string/swipe_down_action_title" android:key="swipe_down_action" android:defaultValue="Nothing" android:entryValues="@array/swipe_action_values" />
    <ch.blinkenlights.android.vanilla.ListPreferenceSummary android:entries="@array/swipe_action_entries" android:title="@string/cover_press_action_title" android:key="cover_press_action" android:defaultValue="ToggleControls" android:entryValues="@array/swipe_action_values" />
    <ch.blinkenlights.android.vanilla.ListPreferenceSummary android:entries="@array/swipe_action_entries" android:title="@string/cover_longpress_action_title" android:key="cover_longpress_action" android:defaultValue="PlayPause" android:entryValues="@array/swipe_action_values" />
</PreferenceScreen>