<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:persistent="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ch.blinkenlights.android.vanilla.ListPreferenceSummary android:entries="@array/notification_visibility_entries" android:title="@string/notification_visibility_title" android:key="notification_visibility" android:defaultValue="0" android:entryValues="@array/entry_values" />
    <ch.blinkenlights.android.vanilla.ListPreferenceSummary android:entries="@array/notification_action_entries" android:title="@string/notification_action_title" android:key="notification_action" android:defaultValue="0" android:entryValues="@array/entry_values" />
    <CheckBoxPreference android:title="@string/notification_nag" android:key="notification_nag" android:summary="@string/notification_nag_summary" android:defaultValue="false" />
</PreferenceScreen>