<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:persistent="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:vanilla="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference android:title="@string/enable_shake_title" android:key="enable_shake" android:summary="@string/enable_shake_summary" android:defaultValue="false" />
    <ch.blinkenlights.android.vanilla.ListPreferenceSummary android:entries="@array/swipe_action_entries" android:title="@string/shake_action_title" android:key="shake_action" android:dependency="enable_shake" android:defaultValue="NextSong" android:entryValues="@array/swipe_action_values" />
    <ch.blinkenlights.android.vanilla.SeekBarPreference android:title="@string/shake_threshold_title" android:key="shake_threshold" android:dependency="enable_shake" android:defaultValue="80" android:negativeButtonText="@null" android:dialogLayout="@layout/seekbar_pref" vanilla:sbpMaxValue="300" vanilla:sbpSummaryValueMultiplication="0.1" />
</PreferenceScreen>